replace with Arrays.asList