@@ -3,6 +3,8 @@ package ru.job4j.stream;
 import static org.junit.Assert.assertThat;
 import static org.hamcrest.Matchers.is;
 import org.junit.Test;
+
+import java.util.Arrays;
 import java.util.List;
 
 public class AnalyzeTest {
@@ -10,8 +12,8 @@ public class AnalyzeTest {
     @Test
     public void whenSinglePupil() {
         double average = Analyze.averageScore(
-                List.of(
-                        new Pupil("Ivanov", List.of(new Subject("Math", 100)))
+                Arrays.asList(
+                        new Pupil("Ivanov", Arrays.asList(new Subject("Math", 100)))
                 ).stream()
         );
         assertThat(average, is(100D));
@@ -20,9 +22,9 @@ public class AnalyzeTest {
     @Test
     public void whenPupilAverage() {
         double average = Analyze.averageScore(
-                List.of(
-                        new Pupil("Ivanov", List.of(new Subject("Math", 100))),
-                        new Pupil("Petrov", List.of(new Subject("Math", 60)))
+                Arrays.asList(
+                        new Pupil("Ivanov", Arrays.asList(new Subject("Math", 100))),
+                        new Pupil("Petrov", Arrays.asList(new Subject("Math", 60)))
                 ).stream()
         );
         assertThat(average, is(80D));
@@ -31,12 +33,12 @@ public class AnalyzeTest {
     @Test
     public void whenListOfPupilAverage() {
         List<Tuple> average = Analyze.averageScoreBySubject(
-                List.of(
-                        new Pupil("Ivanov", List.of(new Subject("Math", 100), new Subject("Lang", 100))),
-                        new Pupil("Petrov", List.of(new Subject("Math", 60), new Subject("Lang", 60)))
+                Arrays.asList(
+                        new Pupil("Ivanov", Arrays.asList(new Subject("Math", 100), new Subject("Lang", 100))),
+                        new Pupil("Petrov", Arrays.asList(new Subject("Math", 60), new Subject("Lang", 60)))
                 ).stream()
         );
-        assertThat(average, is(List.of(
+        assertThat(average, is(Arrays.asList(
                 new Tuple("Ivanov", 100D),
                 new Tuple("Petrov", 60D)
         )));
@@ -45,12 +47,12 @@ public class AnalyzeTest {
     @Test
     public void whenListOfSubjectAverage() {
         List<Tuple> average = Analyze.averageScoreByPupil(
-                List.of(
-                        new Pupil("Ivanov", List.of(new Subject("Math", 100), new Subject("Lang", 100))),
-                        new Pupil("Petrov", List.of(new Subject("Math", 60), new Subject("Lang", 60)))
+                Arrays.asList(
+                        new Pupil("Ivanov", Arrays.asList(new Subject("Math", 100), new Subject("Lang", 100))),
+                        new Pupil("Petrov", Arrays.asList(new Subject("Math", 60), new Subject("Lang", 60)))
                 ).stream()
         );
-        assertThat(average, is(List.of(
+        assertThat(average, is(Arrays.asList(
                 new Tuple("Math", 80D),
                 new Tuple("Lang", 80D)
         )));
@@ -59,9 +61,9 @@ public class AnalyzeTest {
     @Test
     public void whenBestPupil() {
         Tuple best = Analyze.bestStudent(
-                List.of(
-                        new Pupil("Ivanov", List.of(new Subject("Math", 100), new Subject("Lang", 100))),
-                        new Pupil("Petrov", List.of(new Subject("Math", 60), new Subject("Lang", 60)))
+                Arrays.asList(
+                        new Pupil("Ivanov", Arrays.asList(new Subject("Math", 100), new Subject("Lang", 100))),
+                        new Pupil("Petrov", Arrays.asList(new Subject("Math", 60), new Subject("Lang", 60)))
                 ).stream()
         );
         assertThat(best, is(new Tuple("Ivanov", 200D)));
@@ -70,9 +72,9 @@ public class AnalyzeTest {
     @Test
     public void whenBestSubject() {
         Tuple best = Analyze.bestSubject(
-                List.of(
-                        new Pupil("Ivanov", List.of(new Subject("Math", 100), new Subject("Lang", 40))),
-                        new Pupil("Petrov", List.of(new Subject("Math", 60), new Subject("Lang", 60)))
+                Arrays.asList(
+                        new Pupil("Ivanov", Arrays.asList(new Subject("Math", 100), new Subject("Lang", 40))),
+                        new Pupil("Petrov", Arrays.asList(new Subject("Math", 60), new Subject("Lang", 60)))
                 ).stream()
         );
         assertThat(best, is(new Tuple("Math", 160D)));
